--- a/docs/_includes/FAQ/FAQ-contenu.html
+++ b/docs/_includes/FAQ/FAQ-contenu.html
@@ -3,7 +3,7 @@
     <p class="h4-like" aria-level="2" role="heading">Consultez les questions les plus fréquentes :</p>
     <ul class="ds44-collapser ds44-mb-std ">
         <li class="ds44-collapser_element">
-            <button type="button" class="ds44-collapser_button">Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <button type="button" class="ds44-collapser_button" role=”heading” aria-level=”3”>Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i></button>
             <div class="ds44-collapser_content">
                 <ul class="ds44-list ds44-collapser_content--level2">
                     <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
@@ -11,7 +11,7 @@
             </div>
         </li>
         <li class="ds44-collapser_element">
-            <button type="button" class="ds44-collapser_button">Où retirer le dossier de demande d’aide sociale pour un hébergement en maison de retraite ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <button type="button" class="ds44-collapser_button" role=”heading” aria-level=”3”>Où retirer le dossier de demande d’aide sociale pour un hébergement en maison de retraite ?<i class="icon icon-down" aria-hidden="true"></i></button>
             <div class="ds44-collapser_content">
               <ul class="ds44-list ds44-collapser_content--level2">
                   <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
@@ -19,7 +19,7 @@
             </div>
         </li>
         <li class="ds44-collapser_element">
-            <button type="button" class="ds44-collapser_button">Comment faire une demande d’admission en EHPAD ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <button type="button" class="ds44-collapser_button" role=”heading” aria-level=”3”>Comment faire une demande d’admission en EHPAD ?<i class="icon icon-down" aria-hidden="true"></i></button>
             <div class="ds44-collapser_content">
               <ul class="ds44-list ds44-collapser_content--level2">
                   <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
@@ -27,7 +27,7 @@
             </div>
         </li>
         <li class="ds44-collapser_element">
-            <button type="button" class="ds44-collapser_button">A qui dois-je m’adresser pour l’installation d’un système de téléassistance ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <button type="button" class="ds44-collapser_button" role=”heading” aria-level=”3”>A qui dois-je m’adresser pour l’installation d’un système de téléassistance ?<i class="icon icon-down" aria-hidden="true"></i></button>
             <div class="ds44-collapser_content">
               <ul class="ds44-list ds44-collapser_content--level2">
                   <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
@@ -35,7 +35,7 @@
             </div>
         </li>
         <li class="ds44-collapser_element">
-            <button type="button" class="ds44-collapser_button">Mon logement n’est plus adapté, à qui dois-je m’adresser ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <button type="button" class="ds44-collapser_button" role=”heading” aria-level=”3”>Mon logement n’est plus adapté, à qui dois-je m’adresser ?<i class="icon icon-down" aria-hidden="true"></i></button>
             <div class="ds44-collapser_content">
               <ul class="ds44-list ds44-collapser_content--level2">
                   <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
@@ -44,7 +44,7 @@
         </li>
 
         <li class="ds44-collapser_element hidden">
-            <button type="button" class="ds44-collapser_button">Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <button type="button" class="ds44-collapser_button" role=”heading” aria-level=”3”>Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i></button>
             <div class="ds44-collapser_content">
                 <ul class="ds44-list ds44-collapser_content--level2">
                     <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
@@ -52,7 +52,7 @@
             </div>
         </li>
         <li class="ds44-collapser_element hidden">
-            <button type="button" class="ds44-collapser_button">Où retirer le dossier de demande d’aide sociale pour un hébergement en maison de retraite ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <button type="button" class="ds44-collapser_button" role=”heading” aria-level=”3”>Où retirer le dossier de demande d’aide sociale pour un hébergement en maison de retraite ?<i class="icon icon-down" aria-hidden="true"></i></button>
             <div class="ds44-collapser_content">
                 <ul class="ds44-list ds44-collapser_content--level2">
                     <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
@@ -60,7 +60,7 @@
             </div>
         </li>
         <li class="ds44-collapser_element hidden">
-            <button type="button" class="ds44-collapser_button">Comment faire une demande d’admission en EHPAD ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <button type="button" class="ds44-collapser_button" role=”heading” aria-level=”3”>Comment faire une demande d’admission en EHPAD ?<i class="icon icon-down" aria-hidden="true"></i></button>
             <div class="ds44-collapser_content">
                 <ul class="ds44-list ds44-collapser_content--level2">
                     <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
@@ -68,7 +68,7 @@
             </div>
         </li>
         <li class="ds44-collapser_element hidden">
-            <button type="button" class="ds44-collapser_button">A qui dois-je m’adresser pour l’installation d’un système de téléassistance ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <button type="button" class="ds44-collapser_button" role=”heading” aria-level=”3”>A qui dois-je m’adresser pour l’installation d’un système de téléassistance ?<i class="icon icon-down" aria-hidden="true"></i></button>
             <div class="ds44-collapser_content">
                 <ul class="ds44-list ds44-collapser_content--level2">
                     <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
@@ -76,7 +76,7 @@
             </div>
         </li>
         <li class="ds44-collapser_element hidden">
-            <button type="button" class="ds44-collapser_button">Mon logement n’est plus adapté, à qui dois-je m’adresser ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <button type="button" class="ds44-collapser_button" role=”heading” aria-level=”3”>Mon logement n’est plus adapté, à qui dois-je m’adresser ?<i class="icon icon-down" aria-hidden="true"></i></button>
             <div class="ds44-collapser_content">
                 <ul class="ds44-list ds44-collapser_content--level2">
                     <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
@@ -84,7 +84,7 @@
             </div>
         </li>
         <li class="ds44-collapser_element hidden">
-            <button type="button" class="ds44-collapser_button">Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <button type="button" class="ds44-collapser_button" role=”heading” aria-level=”3”>Où trouver le dossier à remplir pour une demande d’APA à domicile ?<i class="icon icon-down" aria-hidden="true"></i></button>
             <div class="ds44-collapser_content">
                 <ul class="ds44-list ds44-collapser_content--level2">
                     <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
@@ -92,7 +92,7 @@
             </div>
         </li>
         <li class="ds44-collapser_element hidden">
-            <button type="button" class="ds44-collapser_button">Où retirer le dossier de demande d’aide sociale pour un hébergement en maison de retraite ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <button type="button" class="ds44-collapser_button" role=”heading” aria-level=”3”>Où retirer le dossier de demande d’aide sociale pour un hébergement en maison de retraite ?<i class="icon icon-down" aria-hidden="true"></i></button>
             <div class="ds44-collapser_content">
                 <ul class="ds44-list ds44-collapser_content--level2">
                     <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
@@ -100,7 +100,7 @@
             </div>
         </li>
         <li class="ds44-collapser_element hidden">
-            <button type="button" class="ds44-collapser_button">Comment faire une demande d’admission en EHPAD ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <button type="button" class="ds44-collapser_button" role=”heading” aria-level=”3”>Comment faire une demande d’admission en EHPAD ?<i class="icon icon-down" aria-hidden="true"></i></button>
             <div class="ds44-collapser_content">
                 <ul class="ds44-list ds44-collapser_content--level2">
                     <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
@@ -108,7 +108,7 @@
             </div>
         </li>
         <li class="ds44-collapser_element hidden">
-            <button type="button" class="ds44-collapser_button">A qui dois-je m’adresser pour l’installation d’un système de téléassistance ?<i class="icon icon-down" aria-hidden="true"></i></button>
+            <button type="button" class="ds44-collapser_button" role=”heading” aria-level=”3”>A qui dois-je m’adresser pour l’installation d’un système de téléassistance ?<i class="icon icon-down" aria-hidden="true"></i></button>
             <div class="ds44-collapser_content">
                 <ul class="ds44-list ds44-collapser_content--level2">
                     <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis tincidunt facilisis. Etiam non purus nulla. Vivamus quis sapien at lorem vestibulum tempus sit amet non orci. Fusce tincidunt ligula sit amet justo ultricies, ultrices egestas ante tincidunt. Nullam vulputate finibus turpis, sed congue purus vestibulum eget.</p></li>
