--- a/framework/scss/components/_collapser.scss
+++ b/framework/scss/components/_collapser.scss
@@ -27,6 +27,13 @@
       }
     }
 
+    .ds44-collapser_button { 
+        &:hover,
+        &:focus {
+            text-decoration: underline;
+        }
+    }
+
     /* Specific collapser for select multilevel */
     &.ds44-collapser--select {
       border: none;
