--- a/docs/_includes/boxes/inc-box-alert.html
+++ b/docs/_includes/boxes/inc-box-alert.html
@@ -1,17 +1,19 @@
 <section class="ds44-alertMsg-container txtcenter">
-  <div class="ds44-collapser center">
-    <div class="ds44-collapser_element">
-        <p role="heading" aria-level="1">
-            <button type="button" class="ds44-collapser_button">
-              <h1 class="ds44-card__title"><i class="icon icon-attention" aria-hidden="true"></i>{{ include.title }}</h1>
-              <i class="icon icon-down icon--sizeXL" aria-hidden="true"></i>
-            </button>
-        </p>
-        <div class="ds44-collapser_content">
-            <div class="ds44-collapser_content--level2">
-              {{ include.content }}
+    <div class="ds44-collapser center">
+        <div class="ds44-collapser_element">
+            <p role="heading" aria-level="1">
+                <button type="button" class="ds44-collapser_button">
+                    <h1 class="ds44-card__title">
+                        <i class="icon icon-attention" aria-hidden="true"></i>{{ include.title }}
+                    </h1>
+                    <i class="icon icon-down icon--sizeXL" aria-hidden="true"></i>
+                </button>
+            </p>
+            <div class="ds44-collapser_content">
+                <div class="ds44-collapser_content--level2">
+                    {{ include.content }}
+                </div>
             </div>
         </div>
     </div>
-  </div>
 </section>
