--- a/docs/_includes/form/layout/error-msg.html
+++ b/docs/_includes/form/layout/error-msg.html
@@ -1,5 +1,5 @@
-<div class="ds44-msg-container error" aria-live="polite">
-    <p id="error-mgs{% increment my_counter %}" class="ds44-message-text" tabindex="-1"><i class="icon icon-attention icon--sizeM" aria-hidden="true"></i><span class="ds44-iconInnerText">Ces champs ne sont pas valides, merci de les vérifier :</span></p>
+<div id="error-mgs{% increment my_counter %}" class="ds44-msg-container error" tabindex="-1">
+    <p class="ds44-message-text"><i class="icon icon-attention icon--sizeM" aria-hidden="true"></i><span class="ds44-iconInnerText">Ces champs ne sont pas valides, merci de les vérifier :</span></p>
     <ul class="ds44-errorList">
         <li>Nom</li>
         <li>Email</li>
