--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -168,6 +168,9 @@ main {
         display: flex;
         justify-content: flex-start;
         position: relative;
+        figure {
+          position: static;
+        }
     }
 
     &__right {
