--- a/docs/_includes/card/card--horizontal.html
+++ b/docs/_includes/card/card--horizontal.html
@@ -9,6 +9,7 @@
       <p role="heading" {{ include.ariaLevel }} class="ds44-card__title"><a href="#" class="ds44-card__globalLink"{% if include.target %} {{ include.target }} title="{{ include.title }} - {{ include.text }} - {{ include.newWindow }}"{% endif %}>{{ include.title }}</a></p>
       {% if include.text %}<p class="ds44-cardFile">{{ include.text }}</p>{% endif %}
       {% if include.tag %}{{ include.tag }}{% endif %}
+      {% if include.time %}<p><i class="icon icon-time ds44-mr1" aria-hidden="true"></i>{{ include.time }}</p>{% endif %}
       <i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i>
     </div>
   </div>
