--- a/docs/_includes/footer/footer-chateauClisson.html
+++ b/docs/_includes/footer/footer-chateauClisson.html
@@ -1,12 +1,12 @@
 <footer role="contentinfo">
     <section class="ds44-container-large ds44--xl-padding-tb">
-        <div class="grid-12-small-1 has-gutter-xl">
+        <div class="grid-12-small-1 has-gutter-l">
             <div class="col-2-small-1">
                 <picture class="ds44-logo ds44-mb3 ds44-mobile-reduced-mt ds44-mobile-reduced-pt">
                     <img src="../../assets/images/logo-loire-atlantique.svg" alt="Loire Atlantique" class="mbm" />
                 </picture>
             </div>
-            <div class="col-4-small-1 ds44-mb3">
+            <div class="col-5-small-1">
                 <h2 class="h4-like" id="idTitreFooter1" role="heading">Château de Clisson</h2>
                 <p class="ds44-docListElem"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i>Rue du Château<br />44190 Clisson</p>
                 <p class="ds44-docListElem mtm"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i>02 40 54 02 22</p>
@@ -18,14 +18,7 @@
                 </p>
                 <p class="ds44-docListElem mtm"><i class="icon icon-time ds44-docListIco" aria-hidden="true"></i>Fermé - ouvre jeudi à 9h</p>
             </div>
-            <div class="col-3-small-1 ds44-mb3">
-                <h2 class="h4-like" id="idTitreFooter2" role="heading">Recevez nos infos</h2>
-                <p class="ds44-mb-std ds44-mobile-reduced-mb">Pour recevoir nos poublications et nos actualités</p>
-                <button class="ds44-btnStd ds44-mobile-reduced-mb" type="button" title="Je m'abonne par mail aux informations du château de Clisson">
-                    <span class="ds44-btnInnerText">Je m'abonne</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i>
-                </button>
-            </div>
-            <div class="col-3-small-1">
+            <div class="col-4-small-1">
                 <p role="heading" aria-level="2" class="h4-like mbs" id="idTitreFooter3">Suivez-nous sur les réseaux sociaux :</p>
                 <ul class="ds44-list ds44-flex-container ds44-flex-tablette-center">
                     <li>
@@ -35,7 +28,10 @@
                         <a href="#" target="_blank" class="ds44-rsFootLink" title="Le château de Clisson sur Instagram - nouvelle fenêtre"><i class="icon icon-instagram" aria-hidden="true"></i><span class="visually-hidden">Le château de Clisson sur Instagram</span></a>
                     </li>
                     <li>
-                        <a href="#" target="_blank" class="ds44-rsFootLink" title="Le château de Clisson - nouvelle fenêtre"><i class="icon icon-twitter" aria-hidden="true"></i><span class="visually-hidden">Le château de Clisson sur Twitter</span></a>
+                        <a href="#" target="_blank" class="ds44-rsFootLink" title="Le château de Clisson sur Twitter - nouvelle fenêtre"><i class="icon icon-twitter" aria-hidden="true"></i><span class="visually-hidden">Le château de Clisson sur Twitter</span></a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank" class="ds44-rsFootLink" title="Le château de Clisson sur Youtube - nouvelle fenêtre"><i class="icon icon-youtube" aria-hidden="true"></i><span class="visually-hidden">Le château de Clisson sur Youtube</span></a>
                     </li>
                 </ul>
             </div>
