--- a/docs/_includes/modal/contact-relais.html
+++ b/docs/_includes/modal/contact-relais.html
@@ -7,28 +7,28 @@
 		<div class="ds44-modal-gab">
 			<p>Contactez le relais assistantes maternelles (RAM) ou relais petite enfance de votre secteur avant toute démarche (recherche, accueil de l’enfant, contrat de travail, rémunération, aides de la CAF…).</p>
 			<div class="ds44-mt3">
-				<h2 class="h4-like" id="titre2">Relais accueil petite enfance (RAPE) - Nantes Sud</h2>
+				<h2 class="h4-like">Relais accueil petite enfance (RAPE) - Nantes Sud</h2>
                 <p class="ds44-docListElem mts"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i>2 ter route de Clisson<br /> 44200 Nantes</p>
                 <p class="ds44-docListElem mts"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i>02 40 41 95 00 </p>
                 <p class="ds44-docListElem mts"><i class="icon icon-mail ds44-docListIco" aria-hidden="true"></i><a href="#mailto:contact@mail.fr" aria-label="Contacter par mail : [Nom du lieu]">Contacter par email</a></p>
                 <p class="ds44-docListElem mts"><i class="icon icon-link ds44-docListIco" aria-hidden="true"></i><a href="https://www.loire-atlantique.fr" title="Site internet : {{ include.title }} – nouvelle fenêtre" target="_blank">Site internet</a></p>
 			</div>
 			<div class="ds44-mt3">
-				<h2 class="h4-like" id="titre2">Relais accueil petite enfance (RAPE) - Nantes Ouest</h2>
+				<h2 class="h4-like">Relais accueil petite enfance (RAPE) - Nantes Ouest</h2>
                 <p class="ds44-docListElem mts"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i>2 ter route de Clisson<br /> 44200 Nantes</p>
                 <p class="ds44-docListElem mts"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i>02 40 41 95 00 </p>
                 <p class="ds44-docListElem mts"><i class="icon icon-mail ds44-docListIco" aria-hidden="true"></i><a href="#mailto:contact@mail.fr" aria-label="Contacter par mail : [Nom du lieu]">Contacter par email</a></p>
                 <p class="ds44-docListElem mts"><i class="icon icon-link ds44-docListIco" aria-hidden="true"></i><a href="https://www.loire-atlantique.fr" title="Site internet : {{ include.title }} – nouvelle fenêtre" target="_blank">Site internet</a></p>
 			</div>
 			<div class="ds44-mt3">
-				<h2 class="h4-like" id="titre2">Relais accueil petite enfance (RAPE) - Nantes Nord</h2>
+				<h2 class="h4-like">Relais accueil petite enfance (RAPE) - Nantes Nord</h2>
                 <p class="ds44-docListElem mts"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i>2 ter route de Clisson<br /> 44200 Nantes</p>
                 <p class="ds44-docListElem mts"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i>02 40 41 95 00 </p>
                 <p class="ds44-docListElem mts"><i class="icon icon-mail ds44-docListIco" aria-hidden="true"></i><a href="#mailto:contact@mail.fr" aria-label="Contacter par mail : [Nom du lieu]">Contacter par email</a></p>
                 <p class="ds44-docListElem mts"><i class="icon icon-link ds44-docListIco" aria-hidden="true"></i><a href="https://www.loire-atlantique.fr" title="Site internet : {{ include.title }} – nouvelle fenêtre" target="_blank">Site internet</a></p>
 			</div>
 			<div class="ds44-mt3">
-				<h2 class="h4-like" id="titre2">Relais accueil petite enfance (RAPE) - Nantes Centre</h2>
+				<h2 class="h4-like">Relais accueil petite enfance (RAPE) - Nantes Centre</h2>
                 <p class="ds44-docListElem mts"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i>2 ter route de Clisson<br /> 44200 Nantes</p>
                 <p class="ds44-docListElem mts"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i>02 40 41 95 00 </p>
                 <p class="ds44-docListElem mts"><i class="icon icon-mail ds44-docListIco" aria-hidden="true"></i><a href="#mailto:contact@mail.fr" aria-label="Contacter par mail : [Nom du lieu]">Contacter par email</a></p>
