--- a/docs/_includes/partage/partage-footer.html
+++ b/docs/_includes/partage/partage-footer.html
@@ -5,6 +5,6 @@
     <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Instagram - nouvelle fenêtre"><i class="icon icon-instagram" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Instagram</span></a></li>
     <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Youtube - nouvelle fenêtre"><i class="icon icon-youtube" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Youtube</span></a></li>
     <li>
-        <a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Mag Web - nouvelle fenêtre"><i class="icon icon-magweb" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Magweb</span></a>
+        <a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Magweb - nouvelle fenêtre"><i class="icon icon-magweb" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Magweb</span></a>
     </li>
 </ul>
