--- a/framework/scss/components/_header.scss
+++ b/framework/scss/components/_header.scss
@@ -100,7 +100,9 @@
 .ds44-subMenu {
     position:fixed;
     background: $ds44-light-color;
-    display:none;
+    display:block;
+    opacity: 0;
+    pointer-events: none;
     box-shadow: 0px 13px 20px 0px rgba(0, 0, 0, 0.35);
     width: 35rem;
     &.full {
@@ -108,6 +110,8 @@
     }
     &.view {
         display:block;
+        opacity: 1;
+        pointer-events: none;
     }
     .ds44-list {
         padding: 2rem;
@@ -120,9 +124,15 @@
         a {
             font-size: 1.2em;
             text-decoration: none;
+            display: block;
+            &:hover {
+                text-decoration: underline;
+            }
         }
     }
 }
+
+
 
 
 /* --------------- */
@@ -178,6 +188,11 @@
                 white-space: nowrap;
             }
 
+            &[data-open-sub-menu] {
+                .icon-toggle {
+                    display:none;
+                }
+            }
         }
 
     }
@@ -257,6 +272,11 @@
 
           &.ds44-btn--menu {
               padding: .5rem 1rem 1rem 1rem;
+          }
+          &[data-open-sub-menu] {
+            .icon-toggle {
+                display:none;
+            }
           }
       }
   }
