--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -280,8 +280,8 @@ table.historiqueAssmat {
   width: 100%;
 
   thead th {
-    font-size: 14px;
-    font-weight: normal;
+    font-size: 16px;
+    font-weight: bold;
   }
   tbody tr td:nth-of-type(1) {
     font-weight: bold;
